--- a/wheateklib/build.gradle
+++ b/wheateklib/build.gradle
@@ -14,6 +14,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
     }
 
     buildTypes {
@@ -30,22 +31,24 @@ android {
 
 dependencies {
 
-    implementation 'cn.jiguang.sdk:jpush:3.5.6'
-    implementation 'cn.jiguang.sdk:jcore:2.2.8'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+
+//    implementation 'cn.jiguang.sdk:jpush:3.5.6'
+//    implementation 'cn.jiguang.sdk:jcore:2.2.8'
 
     // eventbus
-    implementation 'org.greenrobot:eventbus:3.2.0'
+    api 'org.greenrobot:eventbus:3.2.0'
 
-    implementation "androidx.room:room-runtime:2.2.5"
+    api "androidx.room:room-runtime:2.2.5"
 
     // download
-    implementation 'com.liulishuo.filedownloader:library:1.7.6'
+    api 'com.liulishuo.filedownloader:library:1.7.6'
 
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
-    implementation 'com.google.code.gson:gson:2.8.6'
+    api("com.squareup.okhttp3:okhttp:4.9.0")
+    api 'com.google.code.gson:gson:2.8.6'
 
-    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api "io.reactivex.rxjava2:rxjava:2.2.10"
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     //glide
-    implementation "com.github.bumptech.glide:glide:4.0.0"
+    api "com.github.bumptech.glide:glide:4.0.0"
 }
