--- a/wheateklib/build.gradle
+++ b/wheateklib/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-//    implementation 'cn.jiguang.sdk:jpush:3.5.6'
-//    implementation 'cn.jiguang.sdk:jcore:2.2.8'
+    api 'cn.jiguang.sdk:jpush:3.5.6'
+    api 'cn.jiguang.sdk:jcore:2.2.8'
 
     // eventbus
     api 'org.greenrobot:eventbus:3.2.0'
