--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url "http://maven.aliyun.com/nexus/content/repositories/releases/" }
     }
 }
 
