--- a/wheateklib/build.gradle
+++ b/wheateklib/build.gradle
@@ -51,4 +51,9 @@ dependencies {
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     //glide
     api "com.github.bumptech.glide:glide:4.0.0"
+
+    api ('com.aliyun.alink.linksdk:iot-linkkit:1.7.2') {
+        transitive = true
+        changing = true
+    }
 }
