--- a/wheateklib/build.gradle
+++ b/wheateklib/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 
     api "androidx.room:room-runtime:2.2.5"
 
+    api "io.reactivex.rxjava2:rxjava:2.2.10"
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
     // download
     api 'com.liulishuo.filedownloader:library:1.7.6'
 
