--- a/wheateklib/build.gradle
+++ b/wheateklib/build.gradle
@@ -32,6 +32,8 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
     // eventbus
     api 'org.greenrobot:eventbus:3.2.0'
 
