--- a/wheateklib/build.gradle
+++ b/wheateklib/build.gradle
@@ -29,6 +29,8 @@ android {
     }
 }
 
+repositories { flatDir { dirs 'libs' } }
+
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
@@ -54,4 +56,6 @@ dependencies {
         transitive = true
         changing = true
     }
+
+    api(name: 'wheateklib-release', ext: 'aar')
 }
