--- a/wheateklib/build.gradle
+++ b/wheateklib/build.gradle
@@ -57,5 +57,5 @@ dependencies {
         changing = true
     }
 
-    api(name: 'wheateklib-release', ext: 'aar')
+    api(name: 'wheatek-ad', ext: 'aar')
 }
